--- a/src/posts/published/graphs-are-everywhere/index.mdx
+++ b/src/posts/published/graphs-are-everywhere/index.mdx
@@ -4,6 +4,7 @@ date: '2019-09-06'
 description: 'A graph data structure is a useful way to model many things in the real world. Take a look at data visualizations that show this.'
 slug: 'graphs-are-everywhere'
 title: 'Graphs Are Everywhere'
+relevantCourseNickname: 'dsa'
 ---
 
 import DirectedGraph from './DirectedGraph'
@@ -26,8 +27,8 @@ The first graph in this gallery I title _Mutuality_. It is the graph that forms 
     nodes: [{ id: 1 }, { id: 2 }],
     links: [
       { source: 1, target: 2 },
-      { source: 2, target: 1 }
-    ]
+      { source: 2, target: 1 },
+    ],
   }}
 />
 
@@ -44,8 +45,8 @@ _Admiration_ is an admittedly positive take on this graph. It could just as easi
     links: [
       { source: 1, target: 2 },
       { source: 2, target: 3 },
-      { source: 3, target: 1 }
-    ]
+      { source: 3, target: 1 },
+    ],
   }}
 />
 
@@ -71,8 +72,8 @@ The third piece in the gallery is something I've always struggled with, _Lonelin
       { source: 4, target: 5 },
       { source: 5, target: 2 },
       { source: 5, target: 3 },
-      { source: 5, target: 4 }
-    ]
+      { source: 5, target: 4 },
+    ],
   }}
 />
 
@@ -96,7 +97,7 @@ To really get a picture of this, try dragging the nodes around the screen to org
       { id: 4 },
       { id: 5 },
       { id: 6 },
-      { id: 7 }
+      { id: 7 },
     ],
     links: [
       { source: 1, target: 2 },
@@ -104,8 +105,8 @@ To really get a picture of this, try dragging the nodes around the screen to org
       { source: 1, target: 4 },
       { source: 5, target: 1 },
       { source: 6, target: 1 },
-      { source: 7, target: 1 }
-    ]
+      { source: 7, target: 1 },
+    ],
   }}
 />
 
@@ -130,18 +131,18 @@ I know I could be romanticizing something that didn't really exist, but as an ex
       { id: 7 },
       { id: 8 },
       { id: 9 },
-      { id: 10 }
+      { id: 10 },
     ],
     links: [
       { source: 1, target: 2 },
       { source: 2, target: 1 },
       { source: 7, target: 9 },
-      { source: 9, target: 7 }
-    ]
+      { source: 9, target: 7 },
+    ],
   }}
   options={{
     chargeStrength: -25,
-    linkDistance: 60
+    linkDistance: 60,
   }}
 />
 
