--- a/src/posts/published/imagination/index.mdx
+++ b/src/posts/published/imagination/index.mdx
@@ -2,7 +2,7 @@
 date: '2019-05-29'
 slug: 'a-plea-for-imagination'
 title: 'A Plea for Imagination'
-subtitle: 'aka Learn to Remix that Shit! 💩'
+subtitle: 'aka Learn to Remix'
 ---
 
 import { FootnoteMarker as Marker } from '../../../components/Footnotes'
