make script to find non reciprocated related posts slugs and fix em

--- a/src/posts/published/guidelines-for-state-machines-and-xstate/index.mdx
+++ b/src/posts/published/guidelines-for-state-machines-and-xstate/index.mdx
@@ -11,6 +11,9 @@ relatedPostsSlugs:
     'our-first-xstate-machine',
     'xstate-visualizer',
     'enumerate-dont-booleanate',
+    'how-to-use-usereducer-as-a-finite-state-machine',
+    'adding-infinite-states-to-a-use-reducer-finite-state-machine',
+    'can-a-state-machine-be-a-string',
   ]
 relevantCourseNickname: 'xstate'
 ---
