--- a/src/posts/published/enumerate-dont-booleanate/index.mdx
+++ b/src/posts/published/enumerate-dont-booleanate/index.mdx
@@ -5,6 +5,13 @@ slug: 'enumerate-dont-booleanate'
 title: "Enumerate, Don't Booleanate"
 description: 'We learn how to use booleans early and often, but they are not the right tool for the job sometimes. A enum may solve our problems with greater precision.'
 relevantCourseNickname: 'xstate'
+relatedPostsSlugs:
+  [
+    'how-to-use-usereducer-as-a-finite-state-machine',
+    'adding-infinite-states-to-a-use-reducer-finite-state-machine',
+    'can-a-state-machine-be-a-string',
+    'guidelines-for-state-machines-and-xstate',
+  ]
 ---
 
 I want to teach you something that's taken me a few years to learn and a lot of trial and error. I could teach it to you in a couple tweets, but I want to take you on a bit of a journey instead. I want to show a problem, and show you different ways I would attempt to solve it as I go from "naive Kyle" (who am I kidding, I'm probably still naive Kyle) to "knows better Kyle".
