--- a/src/posts/published/just-enough-fp-currying/index.mdx
+++ b/src/posts/published/just-enough-fp-currying/index.mdx
@@ -5,12 +5,14 @@ slug: 'just-enough-fp-currying'
 title: 'Just Enough FP: Currying'
 relatedPostsSlugs:
   [
+    'just-enough-functional-programming-course-launch',
     'just-enough-fp-higher-order-functions',
     'just-enough-fp-pure-functions',
     'just-enough-fp-immutability',
     'just-enough-fp-partial-application',
     'just-enough-fp-argument-order',
     'just-enough-fp-pointfree',
+    'just-enough-fp-composition',
   ]
 relevantCourseNickname: 'fp'
 ---
