--- a/src/posts/published/just-enough-fp-pointfree/index.mdx
+++ b/src/posts/published/just-enough-fp-pointfree/index.mdx
@@ -6,12 +6,14 @@ slug: 'just-enough-fp-pointfree'
 title: 'Just Enough FP: Pointfree'
 relatedPostsSlugs:
   [
+    'just-enough-functional-programming-course-launch',
     'just-enough-fp-higher-order-functions',
     'just-enough-fp-pure-functions',
     'just-enough-fp-immutability',
     'just-enough-fp-currying',
     'just-enough-fp-partial-application',
     'just-enough-fp-argument-order',
+    'just-enough-fp-composition',
   ]
 relevantCourseNickname: 'fp'
 ---
