--- a/src/posts/published/when-elses-make-your-code-worse/index.mdx
+++ b/src/posts/published/when-elses-make-your-code-worse/index.mdx
@@ -6,6 +6,7 @@ title: 'When `else`s Make Your Code Worse'
 subtitle: 'or An Example on How Small Refactors Can Improve Your Code'
 description: 'In this article, Kyle Shevlin teaches us how we can simplify the conditional logic of our code by refactoring it without `else` blocks.'
 relevantCourseNickname: 'dsa'
+relatedPostsSlugs: ['managing-cyclomatic-complexity']
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
