add script to get tags and their counts

--- a/src/posts/published/cyclomatic-complexity/index.mdx
+++ b/src/posts/published/cyclomatic-complexity/index.mdx
@@ -4,7 +4,7 @@ slug: 'managing-cyclomatic-complexity'
 title: 'Managing Cyclomatic Complexity'
 subtitle: ''
 description: 'Understanding cyclomatic complexity and how to manage it can level you up as a programmer'
-tags: ['Data Structures & Algorithms', 'Computer Science']
+tags: ['Data Structures and Algorithms', 'Computer Science']
 relatedPostsSlugs: ['when-elses-make-your-code-worse']
 relevantCourseNickname: 'dsa'
 ---
