--- a/src/posts/published/make-your-own-charts-in-react-without-a-charting-library-part-1/index.mdx
+++ b/src/posts/published/make-your-own-charts-in-react-without-a-charting-library-part-1/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['React', 'SVG']
+tags: ['React', 'Data Visualization', 'SVG']
 date: '2017-06-24'
 slug: 'make-your-own-charts-in-react-without-a-charting-library'
 title: 'Make Your Own Charts in React Without a Charting Library'
