--- a/src/posts/published/break-out-your-component-logic-with-hooks/index.mdx
+++ b/src/posts/published/break-out-your-component-logic-with-hooks/index.mdx
@@ -243,7 +243,7 @@ function SimilarItem() {
 
 <ItemsUsingCustomHook />
 
-Now, both or components consume the same interface, but have the freedom to use only the parts of that interface it requires and to rename parts of that functionality to reflect the context in which they are used. Not only that, but our individual components became smaller and a bit simpler to understand. We no longer have our logic tightly coupled to our component.
+Now, both our components consume the same interface, but have the freedom to use only the parts of that interface it requires and to rename parts of that functionality to reflect the context in which they are used. Not only that, but our individual components became smaller and a bit simpler to understand. We no longer have our logic tightly coupled to our component.
 
 ### Conclusion
 
