Revert "move FootnoteMarker to mdx provider component"
This reverts commit bbd149b33f4a842e800dfdaa695e30374af350f7.

--- a/src/posts/published/break-out-your-component-logic-with-hooks/index.mdx
+++ b/src/posts/published/break-out-your-component-logic-with-hooks/index.mdx
@@ -7,6 +7,7 @@ tags: ['React', 'Hooks', 'Refactoring']
 relatedPostsSlugs: []
 ---
 
+import { FootnoteMarker as Marker } from '../../../components/Footnotes'
 import { WrappedTogglingItem } from './TogglingItem'
 import { WrappedExplicitItem } from './ExplicitItem'
 import ItemsUsingCustomHook from './ItemsUsingCustomHook'
