--- a/src/posts/published/guidelines-for-state-machines-and-xstate/index.mdx
+++ b/src/posts/published/guidelines-for-state-machines-and-xstate/index.mdx
@@ -18,6 +18,8 @@ relatedPostsSlugs:
 relevantCourseNickname: 'xstate'
 ---
 
+import { FootnoteMarker as Marker } from '../../../components/Footnotes'
+
 <!-- ### Table of Contents
 
 1. [Intro](#intro)
