--- a/src/posts/published/experiment-write-a-simple-state-machine-as-a-string/index.mdx
+++ b/src/posts/published/experiment-write-a-simple-state-machine-as-a-string/index.mdx
@@ -16,6 +16,7 @@ relatedPostsSlugs:
 relevantCourseNickname: 'xstate'
 ---
 
+import { FootnoteMarker as Marker } from '../../../components/Footnotes'
 import LightBulb from './LightBulb'
 
 Near the end of last year, I was doing prep work for my first workshop on state machines. In my research, I came across this simple, but effective graph editor: [https://csacademy.com/app/graph_editor/](https://csacademy.com/app/graph_editor/).
