finish post on adding guards

--- a/src/posts/published/adding-infinite-states-to-our-use-reducer-finite-state-machine/index.mdx
+++ b/src/posts/published/adding-infinite-states-to-our-use-reducer-finite-state-machine/index.mdx
@@ -6,6 +6,7 @@ description: 'In this post, Kyle Shevlin explains how to store and update infini
 tags: ['React', 'State Machines']
 relatedPostsSlugs:
   [
+    'adding-guards-to-a-use-reducer-finite-state-machine',
     'how-to-use-usereducer-as-a-finite-state-machine',
     'guidelines-for-state-machines-and-xstate',
     'enumerate-dont-booleanate',
