--- a/src/posts/published/how-to-use-usereducer-as-a-finite-state-machine/index.mdx
+++ b/src/posts/published/how-to-use-usereducer-as-a-finite-state-machine/index.mdx
@@ -6,6 +6,7 @@ description: "In this post, Kyle Shevlin demonstrates a way to make React's `use
 tags: ['React', 'State Machines']
 relatedPostsSlugs:
   [
+    'adding-guards-to-a-use-reducer-finite-state-machine',
     'adding-infinite-states-to-a-use-reducer-finite-state-machine',
     'can-a-state-machine-be-a-string',
     'guidelines-for-state-machines-and-xstate',
