use mdx shortcodes for headings

--- a/src/posts/published/only-three-kinds-of-react-state/index.mdx
+++ b/src/posts/published/only-three-kinds-of-react-state/index.mdx
@@ -16,7 +16,7 @@ import ParentalCounter from './ParentalCounter'
 import { CounterProvider, RemoteCounter } from './RemoteCounter'
 import { bs } from '../../../shevy'
 
-No matter what it is you're building with React, when you boil it down, there are only _three_ ways you can manage data <Marker content={`More often called "state", but I don't want to conflate React "state" with "states" in state machines. They aren't exactly the same thing.`} /> in a React app: **locally**, **parentally**, and **remotely**.
+No matter what it is you're building with React, when you boil it down, there are only _three_ ways you can manage data <Marker content={`More often called "state", but I don't want to conflate React "state" with "states" in state machines which I write about often. They aren't exactly the same thing.`} /> in a React app: [locally](#locally), [parentally](#parentally), and [remotely](#remotely).
 
 ### Locally
 
