update use podia article

--- a/src/posts/published/use-podia/index.mdx
+++ b/src/posts/published/use-podia/index.mdx
@@ -3,12 +3,25 @@ date: '2020-05-23'
 slug: 'use-podia'
 title: 'usePodia'
 subtitle: 'Courses & More Coming Straight to You'
-description: "I'm adding direct-to-customer sales of my courses and content using Podia as a platform. This gives me the opportunity to generate pre-sales for my content going forward."
+description: 'I will be adding direct-to-customer sales of my courses and content using Podia as a platform in the future. This will create new options and opportunities for my content going forward.'
+excerpt: '<p><strong>Update</strong>: I have had to pull my course from Podia for the time being. They will continue to be on egghead.io. There are still plans to bring new content directly to you in the near future.</p>'
 tags: []
 relatedPostsSlugs: []
 ---
 
 import { FootnoteMarker as Marker } from '../../../components/Footnotes'
+
+**Update May 30, 2020**: This update will change the tone of the content below and I apologize for that. In roughly a week, I'll simply unpublish this post to reduce potential future confusion.
+
+I have had to pull my courses from Podia for the time being. They will continue to be on [egghead.io](https://egghead.io).
+
+I still plan to make content to sell directly to you. Podia will be a part of that. And when I'm ready to re-launch again, I'll have new deals for you. It has been a long term goal of mine to learn how to create and run a business of my own, and I will not be giving up that pursuit.
+
+This is just a bump in the road. I minor setback that will seem like nothing in the long run. I want to thank you for your patience and understanding. I appreciate it.
+
+--Kyle
+
+<hr />
 
 You probably know that I have video courses and lessons on [egghead.io](https://egghead.io). What you might _not_ know is instructors maintain the rights to the content that they put on egghead. This gives instructors the freedom to do more with their content if they choose to, and I've been thinking about doing something more with mine for a while now.
 
