modify podia post some more

--- a/src/posts/published/use-podia/index.mdx
+++ b/src/posts/published/use-podia/index.mdx
@@ -29,9 +29,7 @@ I believe there are people who are uncomfortable with buying an egghead subscrip
 
 I also believe there are people who would also be interested in more directly supporting me and my work. I know there are people out there who really take pride in knowing they support quality content creators directly.
 
-I want to make sure all of these groups of people, and others I have not yet considered, have an alternative option to access my content and material. To make this happen, **my courses will now be available for purchase on [Podia](https://kyleshevlin.podia.com), too**.
-
-All of the videos of my egghead courses can be accessed at my store at [https://kyleshevlin.podia.com](https://kyleshevlin.podia.com). You can also access them through the [Courses](/courses) page. You can buy an individual course, or you can buy them all (there's a discount if you buy multiple courses). I'm even offering a 20% discount for the first month with the code **"LAUNCH20"** at checkout.
+I want to make sure all of these groups of people, and others I have not yet considered, have an alternative option to access my content and material. To make this happen, some of my work will be available for purchase on Podia in the near future.
 
 ### Exciting New Possibilities
 
@@ -55,14 +53,6 @@ Absolutely nothing changes about my content on egghead nor will I stop creating 
 
 Simply put, I love egghead and what they've done for me. Truth be told, without [Joel Hooks](https://twitter.com/jhooks) in my life, I would never even _believe_ I am capable of selling content to people. It's because of his mentoring that I even have the idea and courage to try.
 
-egghead has an amazing platform of people and I want to continue to provide quality content for them. Starting a store of my own has always been **in addition to egghead** in my head. They aren't competing. They're working in harmony.
-
-For those who already have an egghead subscription, they will continue to get the greatest value from my video courses. They'll get my courses and dozens of other courses at an incredible monetary value. I could never offer my courses directly to people for such a rate.
-
-For those who don't have an egghead subscription but still want access to my content, now they have it. They aren't locked out anymore.
+egghead has an amazing platform of people and I want to continue to provide quality content for them. Starting a platform of my own, though, is a natural extension of the work I'm doing here with this blog, my [newsletter](/newsletter) and the many ideas I have that I want to share with you in the future.
 
 And now I have the option to generate more content options, which will be a benefit to all people interested in the content. I am convinced it's a situation where there are no losers.
-
-### Summary
-
-My courses are now available on Podia at [https://kyleshevlin.podia.com](https://kyleshevlin.podia.com). Use the code **LAUNCH20** to get a 20% discount, only available for the next month. Time to get excited about the new possibilities!
